custom scrollbar fix

--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -157,6 +157,7 @@ input:focus {
 }
 
 #scroll-thumb {
+  visibility: visible;
   position: absolute;
   z-index: 99;
   width: 4px;
